fix grid on mobile screens

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -122,7 +122,7 @@ section{
 	box-sizing: border-box;
   display:flex;
   flex-direction: column;
-  justify-content: flex-end;
+	justify-content:center;
 	margin:0 auto;
 	max-width:800px;
 	padding-bottom:20%;
@@ -132,7 +132,6 @@ section{
 	}
 
 	@media @phone{
-		display:block;
 		padding: 2em 1em;
 	}
 }
